Added JS folder to the project

--- a/index.html
+++ b/index.html
@@ -30,14 +30,6 @@
       </div>
     </header>
 
-
-
-   
-
- 
-
-
-
-    <script src="index.js"></script>
+    <script src="./js/index.js"></script>
   </body>
 </html>
