Added a small Hero Section

--- a/index.html
+++ b/index.html
@@ -30,6 +30,18 @@
       </div>
     </header>
 
+    <!-- Hero Section -->
+    <section class="hero">
+      <div class="hero-content">
+        <h1>Welcome to Joel's Website</h1>
+        <p>Discover my projects, read my blog, and explore the gallery!</p>
+        <a href="#projects" class="hero-button">Explore Projects</a>
+      </div>
+    </section>
+
+
+    
+
     <script src="./js/index.js"></script>
   </body>
 </html>
