Added Hero Message

--- a/index.html
+++ b/index.html
@@ -34,13 +34,13 @@
     <section class="hero">
       <div class="hero-content">
         <h1>Welcome to Joel's Website</h1>
-        <p>Discover my projects, read my blog, and explore the gallery!</p>
+        <p>Discover my projects, read my blog, and explore the gallery! Stay tuned for more updates as I build this section by section. 😁 </p>
         <a href="#projects" class="hero-button">Explore Projects</a>
       </div>
     </section>
 
 
-    
+
 
     <script src="./js/index.js"></script>
   </body>
