--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       href="https://fonts.googleapis.com/css2?family=Whisper&display=swap"
       rel="stylesheet"
     />
+    <link rel="shortcut icon" href="favicon.ico">
     <title>Joel's Website</title>
   </head>
   <body>
