Modified path for favicon

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       href="https://fonts.googleapis.com/css2?family=Whisper&display=swap"
       rel="stylesheet"
     />
-    <link rel="shortcut icon" href="favicon.ico">
+    <link rel="shortcut icon" href="./assets/favicon.ico" />
     <title>Joel's Website</title>
   </head>
   <body>
@@ -35,13 +35,13 @@
     <section class="hero">
       <div class="hero-content">
         <h1>Welcome to Joel's Website</h1>
-        <p>Discover my projects, read my blog, and explore the gallery! Stay tuned for more updates as I build this section by section. 😁 </p>
+        <p>
+          Discover my projects, read my blog, and explore the gallery! Stay
+          tuned for more updates as I build this section by section. 😁
+        </p>
         <a href="#projects" class="hero-button">Explore Projects</a>
       </div>
     </section>
-
-
-
 
     <script src="./js/index.js"></script>
   </body>
