--- a/index.html
+++ b/index.html
@@ -14,25 +14,28 @@
     <title>Joel's Website</title>
   </head>
   <body>
-    <header class="header">
-      <a href="#" class="logo">JP</a>
-      <nav class="navbar">
-        <a href="#">Home</a>
-        <a href="#">About</a>
-        <a href="#">Projects</a>
-        <a href="#">Blog</a>
-        <a href="#">Gallery</a>
-      </nav>
+    <div class="navbar-container">
+      <header class="header">
+        <a href="#" class="logo">JP</a>
+        <nav class="navbar">
+          <a href="#">Home</a>
+          <a href="#">About</a>
+          <a href="#">Projects</a>
+          <a href="#">Blog</a>
+          <a href="#">Gallery</a>
+        </nav>
 
-      <div class="menu-toggle" id="menu-toggle">
-        <span></span>
-        <span></span>
-        <span></span>
-      </div>
-    </header>
+        <div class="menu-toggle" id="menu-toggle">
+          <span></span>
+          <span></span>
+          <span></span>
+        </div>
+      </header>
+    </div>
 
     <!-- Hero Section -->
     <section class="hero">
+      <img src="./assets/my image.jpg" alt="Your Name" class="hero-image" />
       <div class="hero-content">
         <h1>Welcome to Joel's Website</h1>
         <p>
