--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
       href="https://fonts.googleapis.com/css2?family=Whisper&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+      integrity="sha384-<valid_hash_here>"
+      crossorigin="anonymous"
+    />
     <link rel="shortcut icon" href="./assets/favicon.ico" />
     <title>Joel's Website</title>
   </head>
@@ -24,7 +30,6 @@
           <a href="#">Blog</a>
           <a href="#">Gallery</a>
         </nav>
-
         <div class="menu-toggle" id="menu-toggle">
           <span></span>
           <span></span>
@@ -42,7 +47,9 @@
           Discover my projects, read my blog, and explore the gallery! Stay
           tuned for more updates as I build this section by section. 😁
         </p>
-        <a href="#projects" class="hero-button">Explore Projects</a>
+        <button class="hero-button" id="download-button">
+          <i class="fas fa-download"></i> Download Resume
+        </button>
       </div>
     </section>
 
