Added buttons for LinkedIn and GitHub.

--- a/index.html
+++ b/index.html
@@ -47,9 +47,19 @@
           Discover my projects, read my blog, and explore the gallery! Stay
           tuned for more updates as I build this section by section. 😁
         </p>
-        <button class="hero-button" id="download-button">
-          <i class="fas fa-download"></i> Download Resume
-        </button>
+
+        <!-- Uniform Button Sizes -->
+        <div class="button-group">
+          <button class="hero-button" id="download-button">
+            <i class="fas fa-download"></i> Download Resume
+          </button>
+          <a href="https://github.com/joel-prashanth" class="hero-button social-button" target="_blank">
+            <i class="fab fa-github"></i> GitHub
+          </a>
+          <a href="https://www.linkedin.com/in/joel-prashanth-2b485017a/" class="hero-button social-button" target="_blank">
+            <i class="fab fa-linkedin"></i> LinkedIn
+          </a>
+        </div>
       </div>
     </section>
 
