Changed Hero Text

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <section class="hero">
       <img src="./assets/my image.jpg" alt="Your Name" class="hero-image" />
       <div class="hero-content">
-        <h1>Welcome to Joel's Website</h1>
+        <h1>Welcome!</h1>
         <p>
           Discover my projects, read my blog, and explore the gallery! Stay
           tuned for more updates as I build this section by section. 😁
