Added downward smooth scrolling.

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <a href="#" class="logo">JP</a>
         <nav class="navbar">
           <a href="#">Home</a>
-          <a href="#">About</a>
+          <a href="#about">About</a>
           <a href="#">Projects</a>
           <a href="#">Blog</a>
           <a href="#">Gallery</a>
@@ -47,20 +47,40 @@
           Discover my projects, read my blog, and explore the gallery! Stay
           tuned for more updates as I build this section by section. 😁
         </p>
-
-        <!-- Uniform Button Sizes -->
         <div class="button-group">
           <button class="hero-button" id="download-button">
             <i class="fas fa-download"></i> Download Resume
           </button>
-          <a href="https://github.com/joel-prashanth" class="hero-button social-button" target="_blank">
+          <a
+            href="https://github.com/joel-prashanth"
+            class="hero-button social-button"
+            target="_blank"
+          >
             <i class="fab fa-github"></i> GitHub
           </a>
-          <a href="https://www.linkedin.com/in/joel-prashanth-2b485017a/" class="hero-button social-button" target="_blank">
+          <a
+            href="https://www.linkedin.com/in/joel-prashanth-2b485017a/"
+            class="hero-button social-button"
+            target="_blank"
+          >
             <i class="fab fa-linkedin"></i> LinkedIn
           </a>
         </div>
       </div>
+    </section>
+
+    <!-- Arrow Icon for Scroll -->
+    <div class="scroll-arrow" id="scroll-arrow">
+      <i class="fas fa-arrow-down"></i>
+    </div>
+
+    <!-- About Section -->
+    <section id="about" class="about">
+      <h2>About</h2>
+      <p>
+        This is the About section where you can introduce yourself or provide
+        details about your work.
+      </p>
     </section>
 
     <script src="./js/index.js"></script>
